# currency_rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md
benches/: README.md  currency.rs
src/: currency.rs  currency_err.rs  currency_impl.rs  currency_opts.rs  currency_regex.rs  currency_test.rs  lib.rs
src/currency_impl/: add.rs  div.rs  mul.rs  sub.rs
