[package]
name = "currency_rs"
version = "1.1.4"
edition = "2021"
authors = ["Adel-ak"]
description = "A rust library for handling currencies"
homepage = "https://github.com/Adel-ak/currency_rs"
license-file = "LICENSE.txt"
readme = "README.md"
documentation = "https://docs.rs/currency_rs/latest/currency_rs"
repository = "https://github.com/Adel-ak/currency_rs"
keywords = ["currency", "money", "utilities", "precision", "decimal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.11.0"
