[package]
name = "currency_rs"
version = "1.2.0"
edition = "2021"
authors = ["Adel-ak"]
description = "A rust library for handling currencies"
homepage = "https://github.com/Adel-ak/currency_rs"
license-file = "LICENSE.txt"
readme = "README.md"
documentation = "https://docs.rs/currency_rs/latest/currency_rs"
repository = "https://github.com/Adel-ak/currency_rs"
keywords = ["currency", "money", "utilities", "precision", "decimal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0.1"

[dev-dependencies]
criterion = "0.4.0"
rand = { version = "0.8.5", features = ["serde"] }


[[bench]]
name = "currency"
harness = false
